--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -11,22 +11,22 @@
 <body>
     <div class="wrapper-alert" id="alert"> 
         <div class="alert alert-error">
-            <span class="icon"><i class="fas fa-exclamation-circle"></i></span>
+            <span class="icon-alert"><i class="fas fa-exclamation-circle"></i></span>
             <span>This is an error alert — check it out!</span>
         </div>
 
         <div class="alert alert-warning">
-            <span class="icon"><i class="fas fa-exclamation-triangle"></i></span>
+            <span class="icon-alert"><i class="fas fa-exclamation-triangle"></i></span>
             <span>This is a warning alert — check it out!</span>
         </div>
 
         <div class="alert alert-info">
-            <span class="icon"><i class="fas fa-info-circle"></i></span>
+            <span class="icon-alert"><i class="fas fa-info-circle"></i></span>
             <span>This is an info alert — check it out!</span>
         </div>
 
         <div class="alert alert-success">
-            <span class="icon"><i class="far fa-check-circle"></i></span>
+            <span class="icon-alert"><i class="far fa-check-circle"></i></span>
             <span>This is a success alert — check it out!</span>
         </div>
     </div>
