--- a/components/button/button.html
+++ b/components/button/button.html
@@ -33,18 +33,18 @@
     <h3>buttons with icon</h3>
     <div class="button-wrapper">
         <button class="btn btn-delete btn-secondary">
-            <span class="icon"><i class="far fa-trash-alt"></i></span>
+            <span class="icon-btn"><i class="far fa-trash-alt"></i></span>
             Delete
         </button>
         <button class="btn btn-primary">
             send
-            <span class="icon"><i class="far fa-paper-plane"></i></span>
+            <span class="icon-btn"><i class="far fa-paper-plane"></i></span>
         </button>
-        <button class="btn"><span class="icon"><i class="fas fa-cloud-upload-alt"></i></span>
+        <button class="btn"><span class="icon-btn"><i class="fas fa-cloud-upload-alt"></i></span>
             Upload
         </button>
         <button class="btn btn-primary">
-            <span class="icon"><i class="far fa-save"></i></span>
+            <span class="icon-btn"><i class="far fa-save"></i></span>
             save
         </button>
     </div>
@@ -52,19 +52,19 @@
     <h3>Floating Action buttons</h3>
     <div class="button-wrapper">
         <button class="btn btn-primary btn-floating">
-            <span class="icon"><i class="fas fa-plus"></i></span>
+            <span class="icon-btn"><i class="fas fa-plus"></i></span>
         </button>
 
         <button class="btn btn-primary btn-floating">
-            <span class="icon"><i class="fas fa-pen"></i></span>
+            <span class="icon-btn"><i class="fas fa-pen"></i></span>
         </button>
 
         <button class="btn btn-secondary btn-delete btn-floating">
-            <span class="icon"><i class="far fa-trash-alt"></i></span>
+            <span class="icon-btn"><i class="far fa-trash-alt"></i></span>
         </button>
 
         <button class="btn btn-primary btn-floating">
-            <span class="icon"><i class="fas fa-arrow-up"></i></span>
+            <span class="icon-btn"><i class="fas fa-arrow-up"></i></span>
         </button>
     </div>
 
