--- a/components/cards/card.html
+++ b/components/cards/card.html
@@ -24,7 +24,7 @@
         <div class="card-details">
           <div class="card-item">
             <h1 class="card-product-name">iPhone 13 Pro</h1>
-            <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
+            <span class="icon-card icon-heart"><i class="fas fa-heart"></i></span>
           </div>
           <div class="card-brief-detail">
             <p>
@@ -39,12 +39,12 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn btn-primary">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn-card-primary">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
-            <button class="btn btn-primary-outline">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn-primary-card-outline">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Wishlist
             </button>
           </div>
@@ -75,7 +75,7 @@
         <div class="card-details">
           <div class="card-item">
             <h1 class="card-product-name">Samsung Galaxy S21 5G</h1>
-            <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
+            <span class="icon-card icon-heart"><i class="fas fa-heart"></i></span>
           </div>
           <div class="card-brief-detail">
             <p>
@@ -90,12 +90,12 @@
             <span class="price text-discount">29%</span>
           </div>
           <div class="card-btn">
-            <button class="btn btn-primary">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn--card-primary">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
-            <button class="btn btn-wishlist">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn-wishlist">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Wishlist
             </button>
           </div>
@@ -126,7 +126,7 @@
         <div class="card-details">
           <div class="card-item">
             <h1 class="card-product-name">iPhone 13 Pro</h1>
-            <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
+            <span class="icon-card icon-heart"><i class="fas fa-heart"></i></span>
           </div>
           <div class="card-brief-detail">
             <p>Sierra Blue</p>
@@ -138,12 +138,12 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn btn-primary">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn-primary.-card">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
-            <button class="btn btn-primary-outline hide">
-              <span class="icon"><i class="fas fa-shoping-cart"></i></span>
+            <button class="btn-card btn-primary-card-outline hide">
+              <span class="icon-card"><i class="fas fa-shoping-cart"></i></span>
               Add to Wishlist
             </button>
           </div>
@@ -173,7 +173,7 @@
         <div class="card-details">
           <div class="card-item">
             <h1 class="card-product-name">iPhone 13 Pro</h1>
-            <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
+            <span class="icon-card icon-heart"><i class="fas fa-heart"></i></span>
           </div>
           <div class="card-brief-detail">
             <p>Sierra Blue</p>
@@ -185,8 +185,8 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn btn-primary">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn--card-primary">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
           </div>
@@ -217,7 +217,7 @@
         <div class="card-details">
           <div class="card-item">
             <h1 class="card-product-name">iPhone 13 Pro</h1>
-            <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
+            <span class="icon-card icon-heart"><i class="fas fa-heart"></i></span>
           </div>
           <div class="card-brief-detail">
             <p>Sierra Blue</p>
@@ -229,12 +229,12 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn btn-primary-outline">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn-primary-card-outline">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
-            <button class="btn btn-primary-outline hide">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn-primary-card-outline hide">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Wishlist
             </button>
           </div>
@@ -265,7 +265,7 @@
         <div class="card-details">
           <div class="card-item">
             <h1 class="card-product-name">iPhone 13 Pro</h1>
-            <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
+            <span class="icon-card icon-heart"><i class="fas fa-heart"></i></span>
           </div>
           <div class="card-brief-detail">
             <p>Sierra Blue</p>
@@ -277,11 +277,11 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn btn-primary">
-              <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <button class="btn-card btn-primary-card">
+              <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
-            <button class="btn btn-primary-outline hide">
+            <button class="btn-card btn-primary-card-outline hide">
               <span class="icon"><i class="fas fa-shoping-cart"></i></span>
               Add to Wishlist
             </button>
@@ -316,7 +316,7 @@
           <div class="card-details">
             <div class="card-item">
               <h1 class="card-product-name">iPhone 13 Pro</h1>
-              <span class="icon icon-heart"><i class="fas fa-heart"></i></span>
+              <span class="icon-card icon-heart"><i class="fas fa-heart"></i></span>
             </div>
             <div class="card-brief-detail">
               <p>Sierra Blue</p>
@@ -328,12 +328,12 @@
               <span class="price text-discount">10%</span>
             </div>
             <div class="card-btn">
-              <button class="btn btn-primary">
-                <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+              <button class="btn-card btn-primary-card">
+                <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
                 Add to Cart
               </button>
-              <button class="btn btn-primary-outline hide">
-                <span class="icon"><i class="fas fa-shoping-cart"></i></span>
+              <button class="btn-card btn-primary-card-outline hide">
+                <span class="icon-card"><i class="fas fa-shoping-cart"></i></span>
                 Add to Wishlist
               </button>
             </div>
