--- a/components/badge/badge.html
+++ b/components/badge/badge.html
@@ -30,11 +30,11 @@
     <br>
     <div class="badge-icon-wrapper">
         <div class="badge-icon">
-            <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+            <span class="icon-badge"><i class="fas fa-shopping-cart"></i></span>
             <span class="badge-number">2</span>
         </div>
         <div class="badge-icon">
-            <span class="icon"><i class="far fa-bell"></i></span>
+            <span class="icon-badge"><i class="far fa-bell"></i></span>
             <span class="badge-number">2</span>
         </div>
     </div>
