--- a/components/input/input.html
+++ b/components/input/input.html
@@ -10,14 +10,14 @@
   <body>
     <div class="simple-input">
       <label class="label" for="input-text">Label</label>
-      <input type="text" name="input" />
+      <input class="input-width" type="text" name="input" />
     </div>
 
     <br/>
 
     <div class="error-input">
       <label class="label" for="input-error">Label</label>
-      <input type="text" class="err"/>
+      <input type="text" class="err input-width"/>
       <div class="error-message">Wrong Password. Try again.</div>
     </div>
 
@@ -25,7 +25,7 @@
      
     <div class="success-input">
         <label class="label" for="input-success">Label</label>
-        <input type="text" class="success"/>
+        <input type="text" class="success input-width"/>
         <div class="success-message">This is success message</div>
     </div>
 
