--- a/components/cards/card.html
+++ b/components/cards/card.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="/components/card/card.css" />
+    <link rel="stylesheet" href="/components/cards/card.css"/>
     <title>Card</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn-card btn-card-primary">
+            <button class="btn-card btn-primary-card">
               <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
@@ -68,7 +68,7 @@
       <span class="card-unavailable hide">Currently unavailable</span>
       <div class="horizontal-card">
         <div class="card-horizontal-image">
-          <img src="/images/samsungs215g.jpeg" alt="img" />
+          <img class="img-cards" src="/images/samsungs215g.jpeg" alt="img" />
           <span class="badge-new hide">New</span>
           <span class="delete-icon hide">&times;</span>
         </div>
@@ -90,7 +90,7 @@
             <span class="price text-discount">29%</span>
           </div>
           <div class="card-btn">
-            <button class="btn-card btn--card-primary">
+            <button class="btn-card btn-primary-card">
               <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
@@ -119,7 +119,7 @@
       <span class="card-unavailable hide">Currently unavailable</span>
       <div class="card">
         <div class="card-image">
-          <img src="/images/iphone13pro.jpeg" alt="img" />
+          <img class="img-cards" src="/images/iphone13pro.jpeg" alt="img" />
           <span class="badge-new hide">New</span>
           <span class="delete-icon hide">&times;</span>
         </div>
@@ -138,7 +138,7 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn-card btn-primary.-card">
+            <button class="btn-card btn-primary-card">
               <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
@@ -167,7 +167,7 @@
       <span class="card-unavailable hide">Currently unavailable</span>
       <div class="card">
         <div class="card-image">
-          <img src="/images/iphone13pro.jpeg" alt="img" />
+          <img class="img-cards" src="/images/iphone13pro.jpeg" alt="img" />
           <span class="badge-new">New</span>
         </div>
         <div class="card-details">
@@ -185,7 +185,7 @@
             <span class="price text-discount">10%</span>
           </div>
           <div class="card-btn">
-            <button class="btn-card btn--card-primary">
+            <button class="btn-card btn-primary-card">
               <span class="icon-card"><i class="fas fa-shopping-cart"></i></span>
               Add to Cart
             </button>
@@ -210,7 +210,7 @@
       <span class="card-unavailable hide">Currently unavailable</span>
       <div class="card">
         <div class="card-image">
-          <img src="/images/iphone13pro.jpeg" alt="img" />
+          <img class="img-cards" src="/images/iphone13pro.jpeg" alt="img" />
           <span class="badge-new">New</span>
           <span class="delete-icon">&times;</span>
         </div>
@@ -258,7 +258,7 @@
       <span class="card-unavailable">Currently unavailable</span>
       <div class="card card-opacity">
         <div class="card-image">
-          <img src="/images/iphone13pro.jpeg" alt="img" />
+          <img class="img-cards" src="/images/iphone13pro.jpeg" alt="img" />
           <span class="badge-new hide">New</span>
           <span class="delete-icon hide">&times;</span>
         </div>
@@ -309,7 +309,7 @@
         <span class="card-unavailable hide">Currently unavailable</span>
         <div class="card">
           <div class="card-image">
-            <img src="/images/iphone13pro.jpeg" alt="img" />
+            <img class="img-cards" src="/images/iphone13pro.jpeg" alt="img" />
             <span class="badge-new hide">New</span>
             <span class="delete-icon hide">&times;</span>
           </div>
