change card to cards

--- a/components/cards/card.html
+++ b/components/cards/card.html
@@ -352,6 +352,6 @@
         </div>
       </div>
 
-    <script src="/components/card/card.js"></script>
+    <script src="/components/cards/card.js"></script>
   </body>
 </html>
