add flex property

--- a/CSS/global.css
+++ b/CSS/global.css
@@ -27,3 +27,14 @@ h5,
 h6 {
     margin: 0;
 }
+
+
+.flex {
+    display: flex;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
