refactor : change code snippet

--- a/Documentation/docs.css
+++ b/Documentation/docs.css
@@ -145,6 +145,7 @@ body {
 .variant-heading {
     font-size: 1.6rem;
     font-weight: 800;
+    color: var(--primary-color);
 }
 
 .heading-discription {
@@ -169,15 +170,13 @@ body {
 
 
 .code-container {
-    max-width: 100%;
+  width: 100%;
+  max-width: 34rem;
+  margin: auto;
+  margin-bottom: 2rem;
 }
 
 .iframe-length {
-    border: 0;
-    width: 100%;
-    height: 250px;
-    overflow: hidden;
-    transform: scale(1);
 }
 
 .position {
