style : add style to navbar

--- a/Documentation/docs.css
+++ b/Documentation/docs.css
@@ -13,8 +13,12 @@ body {
 /*************** || navbar ****************/
 
 .landing-link {
-  color: var(--primary-color);
+  color: #fff;
   text-decoration: none;
+}
+
+.landing-link:hover {
+  color: var(--primary-hover);
 }
 
 .navbar-wrapper {
@@ -22,8 +26,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 15px;
+  background-color: #0cbaba;
+  background-image: linear-gradient(315deg, #0c89ba 0%, #03396b 74%);
 }
+
 
 .navbar {
   display: flex;
@@ -43,6 +49,7 @@ body {
   padding-left: 1.5rem;
   cursor: pointer;
   font-size: 1.4rem;
+  color: #fff;
 }
 
 /*************** || Docs main container ****************/
@@ -176,8 +183,6 @@ body {
   margin-bottom: 2rem;
 }
 
-.iframe-length {
-}
 
 .position {
     justify-content: unset;
