--- a/style.css
+++ b/style.css
@@ -156,5 +156,12 @@ body {
         text-align: center;
     }
 
-    
+    .navbar .landing-link {
+        font-size: 1rem;
+    }
+  
+    .navbar .name-media-change {
+      font-size: 1.2rem;    
+    }
+
 }
