--- a/components/button/button.css
+++ b/components/button/button.css
@@ -1,145 +1,155 @@
 @import "/default.css";
 
 body {
-    margin: 2rem;
+  margin: 2rem;
 }
 
 .button-wrapper {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .btn {
-    padding: 1rem;
-    font-family: inherit;
-    letter-spacing: 1px;
-    background-color: #eee;
-    text-transform: uppercase;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: 400;
-    box-shadow: 0px 3px 1px -2px RGB(0 0 0/20%), 0px 2px 2px 0px RGB(0 0 0/14%), 0px 1px 5px 0px RGB(0 0 0/12%);
-    transition: .4s ease-in-out;
+  padding: 1rem;
+  font-family: inherit;
+  letter-spacing: 1px;
+  background-color: #eee;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 400;
+  box-shadow: 0px 3px 1px -2px RGB(0 0 0/20%), 0px 2px 2px 0px RGB(0 0 0/14%),
+    0px 1px 5px 0px RGB(0 0 0/12%);
+  transition: 0.4s ease-in-out;
 }
 
 .button-wrapper button {
-    margin: .5rem;
+  margin: 0.5rem;
 }
 
 /* Contained buttons */
 
 .btn-primary {
-    background-color: var(--primary-color);
-    color: #fff;
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
 .btn-secondary {
-    background-color: var(--secondary-color);
-    font-weight: 500;
-    color: #000;
+  background-color: var(--secondary-color);
+  font-weight: 500;
+  color: #000;
 }
 
 .btn-disabled {
-    background-color: #9CA3AF;
-    pointer-events: none;
-    color: var(--default-black);
+  background-color: #9ca3af;
+  pointer-events: none;
+  color: var(--default-black);
 }
 
 .btn:hover {
-    background-color: var(--default-hover);
+  background-color: var(--default-hover);
 }
 
 .btn-primary:hover {
-    background-color: var(--primary-hover);
+  background-color: var(--primary-hover);
 }
 
 .btn-secondary:hover {
-    background-color: var(--secondary-hover);
+  background-color: var(--secondary-hover);
 }
-
 
 /* Outlined Buttons */
 
-
 .btn-primary-outline {
-    border: 2px solid var(--primary-color);
-    box-shadow: none;
-    background-color: transparent;
+  border: 2px solid var(--primary-color);
+  box-shadow: none;
+  background-color: transparent;
 }
 
-.btn-primary-outline:hover{
-    background-color: var(--primary-color);
-    color: #fff;
+.btn-primary-outline:hover {
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
 .btn-secondary-outline {
-    box-shadow: none;
-    border: 2px solid var(--secondary-hover);
-    background-color: transparent;
+  box-shadow: none;
+  border: 2px solid var(--secondary-hover);
+  background-color: transparent;
 }
 
 .btn-secondary-outline:hover {
-    background-color: var(--secondary-hover);
+  background-color: var(--secondary-hover);
 }
 
 /* Link Buttons */
 
-
 .btn-primary-link {
-    box-shadow: none;
-    background-color: transparent;
-    color:var(--primary-color);
+  box-shadow: none;
+  background-color: transparent;
+  color: var(--primary-color);
 }
 
 .btn-secondary-link {
-    box-shadow: none;
-    background-color: transparent;
+  box-shadow: none;
+  background-color: transparent;
 }
 
 .btn-secondary-link:hover {
-    background-color: #e2ebf7;
+  background-color: #e2ebf7;
 }
 
 .btn-primary-link:hover {
-    background-color: #bbd5fa;
+  background-color: #bbd5fa;
 }
 
 .icon-btn {
-    font-size: 1rem;
+  font-size: 1rem;
 }
-
 
 /* floating action button */
 
 .btn-floating {
-    padding: 1.2rem;
-    border-radius: 50%;
+  padding: 1.2rem;
+  border-radius: 50%;
 }
 
 .btn-floating i {
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 
 .btn-delete {
-    background-color: var(--danger-color);
-    color: #fff;
+  background-color: var(--danger-color);
+  color: #fff;
 }
 
 .btn-delete:hover {
-    background-color: var(--danger-hover);
-
+  background-color: var(--danger-hover);
 }
 
 /* Sizes */
 
 .btn-small {
-   font-size: .7rem;
-   height: 3rem;
-   padding: 0  1rem;
+  font-size: 0.7rem;
+  height: 3rem;
+  padding: 0 1rem;
 }
 
 .btn-large {
-    padding: 2rem;
-    font-size: 1.3rem;
+  padding: 2rem;
+  font-size: 1.3rem;
+}
+
+@media screen and (max-width: 500px) {
+
+  /* floating action button */
+
+  .btn-floating {
+    padding: 1rem;
+    border-radius: 50%;
+  }
+
+  .btn-floating i {
+    font-size: 1rem;
+  }
 }
