refactor : remove text

--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -19,7 +19,7 @@
           <div class="menu-bar">
             <i class="fas fa-bars"></i>
           </div>
-          <div class="text">San Francisco, CA</div>
+          <div class="text">San Francisco</div>
         </div>
         <div class="items">
           <i class="fas fa-download"></i>
@@ -36,7 +36,7 @@
           <div class="menu-bar">
             <i class="fas fa-bars"></i>
           </div>
-          <div class="text">San Francisco, CA</div>
+          <div class="text">San Francisco</div>
         </div>
       </header>
     </div>
@@ -47,7 +47,7 @@
         <div class="menu-bar">
           <i class="fas fa-bars"></i>
         </div>
-        <div class="text text-prominent">San Francisco, CA</div>
+        <div class="text text-prominent">San Francisco</div>
 
         <div class="items">
           <i class="fas fa-bookmark"></i>
@@ -63,7 +63,7 @@
         <div class="menu-bar">
           <i class="fas fa-bars"></i>
         </div>
-        <div class="text text-prominent">San Francisco, CA</div>
+        <div class="text text-prominent">San Francisco</div>
 
         <div class="items">
           <i class="fas fa-bookmark"></i>
@@ -80,7 +80,7 @@
           <div class="menu-bar">
             <i class="fas fa-bars"></i>
           </div>
-          <div class="text">San Francisco, CA</div>
+          <div class="text">San Francisco</div>
         </div>
         <div class="items">
           <input class="input-for-nav" type="text" placeholder="Search..." />
