--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -9,11 +9,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
     <link rel="stylesheet" href="/components/Navbar/navbar.css" />
-    <title>Document</title>
+    <title>Navbar</title>
   </head>
   <body>
     <h2>Standard</h2>
-    <div class="container">
+    <div class="navbars-container">
       <header class="header">
         <div class="menu-container">
           <div class="menu-bar">
@@ -30,7 +30,7 @@
     </div>
 
     <h2>Only Heading</h2>
-    <div class="container">
+    <div class="navbars-container">
       <header class="header header-short">
         <div class="menu-container">
           <div class="menu-bar">
@@ -42,7 +42,7 @@
     </div>
 
     <h2>Prominent</h2>
-    <div class="container">
+    <div class="navbars-container">
       <header class="header header-prominent">
         <div class="menu-bar">
           <i class="fas fa-bars"></i>
@@ -58,7 +58,7 @@
     </div>
 
     <h2>Prominent and dense</h2>
-    <div class="container">
+    <div class="navbars-container">
       <header class="header header-prominent-dense">
         <div class="menu-bar">
           <i class="fas fa-bars"></i>
@@ -74,7 +74,7 @@
     </div>
 
     <h2>Navbar with Input</h2>
-    <div class="container">
+    <div class="navbars-container">
       <header class="header">
         <div class="menu-container">
           <div class="menu-bar">
