--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -14,7 +14,7 @@
   <body>
     <h2>Standard</h2>
     <div class="navbars-container">
-      <header class="header">
+      <header class="header-navs">
         <div class="menu-container">
           <div class="menu-bar">
             <i class="fas fa-bars"></i>
@@ -31,7 +31,7 @@
 
     <h2>Only Heading</h2>
     <div class="navbars-container">
-      <header class="header header-short">
+      <header class="header-navs header-short">
         <div class="menu-container">
           <div class="menu-bar">
             <i class="fas fa-bars"></i>
@@ -43,7 +43,7 @@
 
     <h2>Prominent</h2>
     <div class="navbars-container">
-      <header class="header header-prominent">
+      <header class="header-navs header-prominent">
         <div class="menu-bar">
           <i class="fas fa-bars"></i>
         </div>
@@ -59,7 +59,7 @@
 
     <h2>Prominent and dense</h2>
     <div class="navbars-container">
-      <header class="header header-prominent-dense">
+      <header class="header-navs header-prominent-dense">
         <div class="menu-bar">
           <i class="fas fa-bars"></i>
         </div>
@@ -75,7 +75,7 @@
 
     <h2>Navbar with Input</h2>
     <div class="navbars-container">
-      <header class="header">
+      <header class="header-navs">
         <div class="menu-container">
           <div class="menu-bar">
             <i class="fas fa-bars"></i>
