--- a/CSS/global.css
+++ b/CSS/global.css
@@ -11,6 +11,10 @@
 @import "/components/list/list.css";
 @import "/components/rating/rating.css";
 @import "/components/text utilities/text.css";
+@import "/components/Navbar/navbar.css";
+@import "/components/modal/modal.css";
+@import "/components/toast/toast.css";
+@import "/components/Grids/Grids.css";
 
 /* uitilities */
 body {
