--- a/Documentation/docs.css
+++ b/Documentation/docs.css
@@ -10,6 +10,10 @@ body {
   position: relative;
 }
 
+.flex-column {
+  flex-direction: column;
+}
+
 /*************** || navbar ****************/
 
 .landing-link {
