--- a/components/Grids/Grids.css
+++ b/components/Grids/Grids.css
@@ -14,3 +14,30 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 1.2rem;
 }
+
+
+
+
+@media only screen and (max-width: 700px) {
+    .grid-3-item-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 580px) {
+    .grid-2-item-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .grid-3-item-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1.2rem;
+    }
+}
